# crypto-ta-v2

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/routers/: analysis.py  analyze.py  pairs.py  reports.py  ws.py
backend/app/schemas/: analysis.py
backend/app/services/: analyzer.py  binance_service.py  ta.py
backend/migrations/: env.py
backend/migrations/versions/: 405f88e59fcc_init_analysis_tables.py  7f3c88e7b5e4_change_created_at_to_client_side.py  bcedcdc4faf6_init_schema_clean.py  db4e8f19d82c_fix_status_enum.py  f6cb954fbcc1_make_created_at_not_null.py
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analysis-report/: page.tsx
frontend/app/charts/: TradingViewWidget.tsx
frontend/app/reports/: page.tsx
frontend/app/signals/: page.tsx
frontend/components/: app-sidebar.tsx  nav-user.tsx
frontend/components/analysis/: LastAnalyses.tsx  analysis-card-pro.tsx  analysis-card.tsx  analysis-form.tsx  analyzeButton.tsx  columns.tsx  data-table.tsx
frontend/components/pairs/: PairOverview.tsx  PairSelector.tsx
frontend/components/ui/: badge.tsx
frontend/lib/: api.ts  fetcher.ts  mock.ts
frontend/types/: analysis.ts  global.d.ts
